--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,25 @@
 
 }
 
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: rgb(255, 255, 255);
+  cursor: pointer;
+}
+
+input[type="range"]::-moz-range-thumb {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: var(--bar-background);
+  cursor: pointer;
+}
+
 @keyframes grow{
   from{
     transform: scaleY(0.3);
