added mask to pause/play button

--- a/src/index.css
+++ b/src/index.css
@@ -79,3 +79,19 @@ input[type="range"]::-moz-range-thumb {
     transform: scaleY(1);
   }
 }
+
+
+span.ripple {
+  position: absolute;
+  border-radius: 50%;
+  transform: scale(0);
+  animation: ripple 600ms linear;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+@keyframes ripple {
+  to {
+    transform: scale(4);
+    opacity: 0;
+  }
+}
+
