--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,21 @@
 
 }
 
+.swiper {
+  /* margin: 100px auto; */
+  /* width: 320px;
+  height: 240px; */
+}
+
+/* .swiper-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 22px;
+  font-weight: bold;
+  color: #fff;
+} */
+
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
